fixed scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -528,7 +528,7 @@ footer .wrapper nav ul li {
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
-.button:hover, .button:active {
+.button:active {
   transform: translateY(-2px);
 }
 .button span {
@@ -550,7 +550,7 @@ footer .wrapper nav ul li {
   border: 4px solid #801d14;
 }
 .button__trans:active, .button__trans:hover {
-  background-color: #e7e7e7;
+  background-color: #f3f3f380;
 }
 .button__trans span {
   color: #801d14;
@@ -1125,6 +1125,13 @@ footer .wrapper nav ul li {
 962x601 (3.2%)
 
  */
+@media (max-width: 47.9375em) {
+  .preventBodyScroll {
+    height: 100vh;
+    overflow-y: hidden;
+  }
+}
+
 .cart-aside {
   transition: all 0.4s;
   position: fixed;
@@ -1190,6 +1197,7 @@ footer .wrapper nav ul li {
 .cart-aside-full {
   width: 100%;
   margin-top: 1rem;
+  margin-bottom: 240px;
   overflow: auto;
 }
 .cart-aside-empty {
